vagrant/synced_folders_k8s/bgp-endpnt.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: bgp-svc
subsets:
  - addresses:
    - ip: 192.168.10.10
    ports:
    - name: "bgp-remote"
      port: 179
