vagrant/synced_folders_k8s/bgp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bgp-svc
spec:
  ports:
  - name: "bgp-remote"
    protocol: "TCP"
    port: 179
    nodePort: 0
