vagrant/synced_folders_k8s/devstack-ssh-endpnt.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: devstack-ssh-svc
subsets:
  - addresses:
    - ip: 192.168.10.200
    ports:
    - name: "ssh"
      port: 22
