vagrant/synced_folders_k8s/devstack-ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: devstack-ssh-svc
spec:
  ports:
  - name: "ssh"
    protocol: "TCP"
    port: 22
    nodePort: 0
