vagrant/synced_folders_k8s/evpn-api-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: evpn-api-ssh
spec:
  type: NodePort
  ports:
  - port: 2222
    targetPort: ssh
  selector:
    app: evpn-api
