vagrant/synced_folders_k8s/evpn-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: evpn-api-svc
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: evpn-api
