vagrant/synced_folders_k8s/ovsdb-endpnt.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ovsdb
subsets:
  - addresses:
    - ip: 192.168.10.20
    ports:
    - name: "ovnnb"
      port: 6641
    - name: "ovs"
      port: 6640
