vagrant/synced_folders_k8s/ovsdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ovsdb
spec:
  ports:
  - name: "ovnnb"
    protocol: "TCP"
    port: 6641
    targetPort: 6641
    nodePort: 0
  - name: "ovs"
    protocol: "TCP"
    port: 6640
    targetPort: 6640
    nodePort: 0
