vagrant/synced_folders_k8s/rabbitmq-endpnt.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: rabbitmq-svc
subsets:
  - addresses:
    - ip: 192.168.10.200
    ports:
    - name: "rabbitmq"
      port: 5672
