vagrant/synced_folders_k8s/evpn-api-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evpn-api-ing
spec:
  rules:
  - host: "evpn-api.domain-x.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: evpn-api-svc
            port:
              number: 5000
